@@ -1,3 +1,6 @@
+[B]Version v0.4.8[/B]
+- Removed GA for video title.
+
 [B]Version v0.4.7[/B]
 - Enabled Queue of Audio URL when Audio player is ON.
 
